--- a/index.html
+++ b/index.html
@@ -592,8 +592,8 @@
                             <div class="details mb-3">
                             </div>
                             <h5 class="card-title" style="color: #F9667E; font-size: 30px;">Love</h5>
-                            <p>Sau những gì đã trải qua, anh không nghĩ mình có thể yêu thêm một ai thật nhiều. Nhưng anh nhầm rồi, anh đã yêu em nhiều hơn mỗi ngày 1 chút 1 chút 1 chút.
-                                Anh không biết là mình sẽ đi được với nhau bao xa, hay có cùng tiến đến cái đích của tình yêu hay không nữa.
+                            <p>Anh rất thích 1 câu nói trong phim Bố Gìa đó là : "Những chuyện đau khổ xảy ra chính là tiền đề để những điều tốt đẹp được xảy ra". Và sau những gì đã trải qua, anh không nghĩ mình có thể yêu thêm một ai thật nhiều. 
+                              Nhưng anh nhầm rồi, anh đã yêu em nhiều hơn mỗi ngày 1 chút 1 chút 1 chút. Và anh mong điều tốt đẹp sẽ xảy ra đối với anh. Anh không biết là mình sẽ đi được với nhau bao xa, hay có cùng tiến đến cái đích của tình yêu hay không nữa.
                                 Nhưng anh biết chắc một điều là anh yêu em rất trân thành và luôn mong những điều tốt đẹp nhất đến với em. Anh sẽ cố gắng từng ngày, cố gắng hơn nữa để mang lại hạnh phúc cho em. Tin anh nhé!.
                             </p>
                         </div>
@@ -815,7 +815,9 @@
               </button>
             </div >
             <div style="width: 800px; height: 500px;">
-                  <iframe width="800px" height="500px" src="https://www.youtube.com/embed/LKN3k3vnONI" title="Mãi yêu ❤️" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+              <video controls  style="width: 800px; height: 500px;">
+                <source src="../assets/imgs/trangvan.mp4">
+              </video>
             </div>
 
           </div>
