--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
             <p style="color: #F9667E !important">21/09/2022 10:13 AM: Mình gửi bạn JD tham khảo về vị trí .Net bên mình ạ </p>
         </div>
         <div class="box-item">
-            <img src="../assets/imgs/dinosaur.png" alt="" style="min-height: 10px; min-width: 10px !important; width: 65px; height: 65px; margin-bottom: 10px;">
+            <img src="./assets/imgs/dinosaur.png" alt="" style="min-height: 10px; min-width: 10px !important; width: 65px; height: 65px; margin-bottom: 10px;">
             <p style="color: #F9667E !important">17/11/2022 ??:?? PM : Anh không muốn làm bạn với em nữa! Em tin anh chứ?</p>
         </div>
     </div>
@@ -146,7 +146,7 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-md-5 col-lg-4">
-                    <img src="../assets/imgs/img1.JPG" alt="" width="300px" height="400px">
+                    <img src="./assets/imgs/img1.JPG" alt="" width="300px" height="400px">
                 </div>
                 <div class="col-md-7 col-lg-8">
                     <h6 class="section-subtitle mb-0" style="font-family: 'Playball', cursive; "></h6>
